[package]
name = "core_ds"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "core_ds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
sdk = ["dep:serde"]

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
serde = { version = "1.0.147", optional=true }